# agentwall

./: .gitignore  BENCHMARK.md  BENCHMARK3000.md  BENCHMARK3000.md.before  CLAUDE.md  README.md  action.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: agentwall-v1-okr-loop.md
.claude/hooks/: pre-stop-gate.sh
.claude/rules/: analyzer-architecture.md  autogen-adapter.md  benchmark-testing.md  crewai-adapter.md  github-action-security.md  honesty-first.md  langchain-adapter.md  (+7 more)
.github/: labels.yml  setup-discussions.sh  setup-labels.sh
docs/: ANALYSIS_LAYERS.md  ARCHITECTURE_V4.md  AgentWall_Architecture_V4_Proposal.docx  COMPETITIVE_ANALYSIS.md  COMPETITIVE_README_SECTION.md  COMPETITIVE_RESEARCH_INDEX.md  COMPETITIVE_SUMMARY.json  MARKET_GAP_SUMMARY.txt  V1_RELEASE_OKR.md  rules.md
examples/: fixed_agent.py  unsafe_agent.py
prd/: APPLICATION_SECURITY_MODEL.md  ARCHITECTURE_REFACTOR_PROPOSAL.md  AgentWall_AI_Agent_Integration.md  AgentWall_Architecture_V4_Proposal.md  AgentWall_Enhanced_Memory_Leak_Detection.md  AgentWall_PRD_TechSpec.md  AgentWall_PRD_v2_Solo.md  AgentWall_PRD_v4.md
scripts/: benchmark.sh  benchmark3000.sh
tests/: test_agent_arch_analyzer.py  test_agnostic_integration.py  test_asm_analyzer.py  test_asm_models.py  test_benchmark.py  test_callgraph.py  test_cli.py  test_confidence.py  test_config_auditor.py  test_context.py  test_context_wiring.py  test_crewai_adapter.py  test_detector.py  test_engine_integration.py  test_extractors.py  test_fp_reduction.py  test_framework_model.py  test_graph.py  test_injection_detection.py  test_isolation_evidence.py  test_langchain_adapter.py  test_llamaindex_adapter.py  test_memory_analyzer.py  test_openai_agents_adapter.py  test_patterns.py  test_postprocess.py  test_rag_analyzer.py  test_regression_labeled.py  test_reporters.py  test_rules.py  test_runtime.py  test_scanner.py  test_scanner_self_library.py  test_scoping.py  test_semgrep.py  test_serialization_analyzer.py  test_symbolic.py  test_taint.py  test_tool_analyzer.py
(+81 files in other folders)
