[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentwall"
version = "0.1.0"
description = "Memory security scanner for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "agents", "security", "langchain", "memory", "scanner"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "typer>=0.9",
  "rich>=13.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
chroma = ["chromadb>=0.5"]
pgvector = ["psycopg[binary]>=3.0", "pgvector>=0.3"]
pinecone = ["pinecone>=4.0"]
qdrant = ["qdrant-client>=1.9"]
neo4j = ["neo4j>=5.0"]
weaviate = ["weaviate-client>=4.0"]
milvus = ["pymilvus>=2.4"]
redis = ["redis>=5.0"]
mongodb = ["pymongo>=4.0"]
elasticsearch = ["elasticsearch>=8.0"]
lancedb = ["lancedb>=0.10"]

[project.scripts]
agentwall = "agentwall.cli:app"

[project.urls]
Homepage = "https://github.com/lukehungngo/agentwall"
Issues = "https://github.com/lukehungngo/agentwall/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentwall"]

# --- dependency groups ---
[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

# --- ruff ---
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

# --- mypy ---
[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "src"

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["agentwall"]
branch = true

[tool.coverage.report]
fail_under = 60
show_missing = true
